docs(research): high-fidelity enrichment of jgc-research — study guides, programming examples, DIY & TRY
- collectors.md: 5 key concepts (5 collectors, generational
  hypothesis, pause vs throughput, concurrent mark, compaction),
  collector-by-workload flag examples, compare-collectors +
  Cheney paper DIYs + G1→ZGC TRY
- memory-spaces.md: heap vs native, compressed oops, -Xmx/-Xms/-Xss,
  metaspace, NMT accounting + metaspace growth DIYs + cgroup TRY
- monitoring.md: jcmd/jstat/JFR/JMC/async-profiler/Micrometer tool
  map, JFR recording + async-profiler flame DIYs + Micrometer TRY
- tuning.md: decision tree (latency/throughput/allocation/heap/
  metaspace), canonical ZGC + ParallelGC flags, log analyzer +
  bisect DIYs + Renaissance benchmark TRY